# fastapi-multi-store-rbac

./: .gitignore  README.md  alembic.ini  makefile  manage.py  pyproject.toml
alembic/: env.py
alembic/seed/: seeder.py
alembic/seed/master/: auth_groups.json  cities.json  stores.json  users.json
alembic/versions/: 2025-01-31_c62afe13e2db.py
deployment/: Dockerfile_admin  Dockerfile_auth  docker-compose.yml
libs/shared/auth/: get_current_user.py  get_token_data.py  jwt_validator.py  permission_checker.py
libs/shared/config/: settings.py
libs/shared/db/: database.py  events.py
libs/shared/utils/: base_crud.py  base_model.py  base_service.py  custom_exception.py  migrate_db.py  permission_generator.py  sucess_response.py
services/src_admin/: main.py
services/src_auth/: main.py  pyproject.toml
services/src_auth/app/api/: auth_group.py  permission.py  store.py  user.py
services/src_auth/app/core/: decode_tokens.py  encode_tokens.py  get_jti.py  get_user_auth_group.py  get_user_permission_roles.py  hash_password.py  is_access_token_blacklisted.py  verify_access_token.py  verify_password.py
services/src_auth/app/crud/: auth_group_service.py  permission_service.py  store_service.py  user_service.py
services/src_auth/app/models/: __init__.py  auth_group.py  auth_group_permission.py  city.py  permission.py  refresh_token.py  store.py  token_blacklist.py  user.py  user_store_auth_group.py  user_store_permission.py
services/src_auth/app/schemas/: auth_group.py  jwt_payload.py  permission.py  store.py  users.py
