[tool.poetry]
name = "smartmart-backend"
version = "0.1.0"
description = ""
authors = ["cloco-sagar",]
package-mode=false

[tool.ruff]
select = ["E", "F", "W", "C"]
ignore = ["E501"]  # Ignore long-line errors since Black handles it
target-version = "py312"
exclude = [
    "migrations/*",
    "tests/*",
    "libs/shared/*"
]

[tool.ruff.isort]
case-sensitive = true
force-single-line = true
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
ruff = "^0.9.3"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
